<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/on_boarding_instructions_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OnBoardingInstructionsFragment">


        <TextView
            android:id="@+id/on_boarding_instructions_text"
            style="@style/OnBoardingScreenTextStyle"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/on_boarding_instructions_string"
            app:layout_constraintBottom_toTopOf="@+id/on_boarding_instructions_text_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/on_boarding_instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_boarding_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/on_boarding_instructions_text_second" />

        <TextView
            android:id="@+id/on_boarding_instructions_text_second"
            style="@style/OnBoardingScreenTextStyle"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/remember_that_the_list_of_shoes_is_scrollable_you_can_always_see_the_full_list_by_scrolling_down_the_screen_in_order_to_proceed_press_the_below_button"
            app:layout_constraintBottom_toTopOf="@+id/on_boarding_instructions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/on_boarding_instructions_text" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="132dp"
            android:layout_height="63dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/on_boarding_instructions_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
