<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/login_register_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5sp"
        android:paddingTop="5sp"
        android:paddingRight="5sp"
        android:paddingBottom="5sp"
        tools:context=".LoginFragment">

        <EditText
            android:id="@+id/email_input_text"
            style="@style/LoginRegisterScreenInputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_register_screen_margin"
            android:layout_marginEnd="@dimen/login_register_screen_margin"
            android:layout_marginBottom="@dimen/login_register_screen_margin"
            android:ems="10"
            android:hint="@string/email_input_hint_text"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/box_min_height"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/password_input_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_login_screen"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/password_input_text"
            style="@style/LoginRegisterScreenInputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_register_screen_margin"
            android:layout_marginEnd="@dimen/login_register_screen_margin"
            android:layout_marginBottom="@dimen/login_register_screen_large_bottom_margin"
            android:ems="10"
            android:hint="@string/password_input_hint_text"
            android:inputType="textPassword"
            android:minHeight="@dimen/box_min_height"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_text" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_screen_big_margin"
            android:layout_marginEnd="@dimen/login_screen_big_margin"
            android:layout_marginBottom="@dimen/login_register_screen_margin"
            android:text="@string/login_button_label"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_text" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_screen_big_margin"
            android:layout_marginEnd="@dimen/login_screen_big_margin"
            android:text="@string/register_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <ImageView
            android:id="@+id/logo_login_screen"
            android:layout_width="146dp"
            android:layout_height="75dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>